# tron_vanity

./: Cargo.toml  README.md  patterns.json
src/: hybrid.rs  main.rs
