[package]
name = "tron_vanity_cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
hex = "0.4"
ctrlc = "3.4"
rayon = "1.10"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
